descarga multiple desarrollada sin problemas, se muestran las imagenes apenas se descargan

--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
     <input class="btn-archivo" id="inputImg" multiple type = "file" accept = "image/*" onchange = "handleUploadedFile(event)">
     
 
-    <button class="btn-download">
-        <a download="" id="dw" href="">Descargar</a>
+    <button id="dw" class="btn-download">
+        Descargar
     </button>
 
     <p class="advertencia">* Las imágenes deben ser de la mayor calidad posible, y de preferencia medir entre 1000 y 1500px</p>
 
+    <section id="contenedor-imagenes">
+
+    </section>
    </main>
 
 
